//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Role {
  id String [pk]
  title String [not null]
  internalUsers InternalUser [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table InternalUser {
  id String [pk]
  roleId String [not null]
  username String [not null]
  name String
  password String [not null]
  email String [not null]
  avatarUrl String [not null]
  token String [not null]
  isLogin Boolean [not null]
  PIN String [not null]
  rooms Room [not null]
  role Role [not null]
  quizzes Quizz [not null]
  tags Tag [not null]
  questionCategories QuestionCategory [not null]
  answerCategories AnswerCategory [not null]
  quizzSets QuizzSet [not null]
  multiPlayerGames MultiPlayerGame [not null]
  singlePlayerGames SinglePlayerGame [not null]
  histories History [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ExternalUser {
  id String [pk]
  name String [not null]
  token String [not null]
  room Room
  roomId String
  history History
  historyId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Quizz {
  id String [pk]
  userId String [not null]
  tagId String [not null]
  questionCategoryId String [not null]
  answerCategoryId String [not null]
  time Int [not null]
  content String [not null]
  quizzSetId String [not null]
  answers Answer [not null]
  user InternalUser [not null]
  tag Tag [not null]
  categoryQuestion QuestionCategory [not null]
  answerCategory AnswerCategory [not null]
  quizzSet QuizzSet [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Tag {
  id String [pk]
  userId String [not null]
  title String [not null]
  user InternalUser [not null]
  quizzes Quizz [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table QuestionCategory {
  id String [pk]
  userId String [not null]
  title String [not null]
  user InternalUser [not null]
  quizzes Quizz [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table AnswerCategory {
  id String [pk]
  userId String [not null]
  title String [not null]
  user InternalUser [not null]
  quizzes Quizz [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Answer {
  id String [pk]
  quizzId String [not null]
  content String [not null]
  isCorrect Boolean [not null]
  quizz Quizz [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table QuizzSet {
  id String [pk]
  userId String [not null]
  type String [not null]
  quizId String [not null]
  isShared Boolean [not null]
  quizzes Quizz [not null]
  multiPlayerGames MultiPlayerGame [not null]
  singlePlayerGames SinglePlayerGame [not null]
  User InternalUser [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table MultiPlayerGame {
  id String [pk]
  userId String [not null]
  roomId String [not null]
  url String [not null]
  token String [not null]
  isLock Boolean [not null]
  quizzSetId String [not null]
  quizzSet QuizzSet [not null]
  user InternalUser [not null]
  history History
  room Room
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table SinglePlayerGame {
  id String [pk]
  userId String [not null]
  quizzSetId String [not null]
  url String [not null]
  token String [not null]
  isLock Boolean [not null]
  singlePlayerGameCategoryId String [not null]
  quizzSet QuizzSet [not null]
  user InternalUser [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  singlePlayerGameCategory SinglePlayerGameCategory [not null]
}

Table SinglePlayerGameCategory {
  id String [pk]
  title String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  singlePlayerGames SinglePlayerGame [not null]
}

Table Room {
  id String [pk]
  multiPlayergameId String [unique, not null]
  internalUsers InternalUser [not null]
  externalUsers ExternalUser [not null]
  multiPlayergame MultiPlayerGame [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table History {
  id String [pk]
  multiPlayergameId String [unique, not null]
  userId String [not null]
  externalUsers ExternalUser [not null]
  user InternalUser [not null]
  multiPlayergame MultiPlayerGame [not null]
  ranks Rank [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Rank {
  id String [pk]
  historyId String [not null]
  username String [not null]
  top Int [not null]
  score Int [not null]
  history History [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: InternalUser.roleId > Role.id

Ref: ExternalUser.roomId > Room.id

Ref: ExternalUser.historyId > History.id

Ref: Quizz.userId > InternalUser.id

Ref: Quizz.tagId > Tag.id

Ref: Quizz.questionCategoryId > QuestionCategory.id

Ref: Quizz.answerCategoryId > AnswerCategory.id

Ref: Quizz.quizzSetId > QuizzSet.id [delete: Cascade]

Ref: Tag.userId > InternalUser.id

Ref: QuestionCategory.userId > InternalUser.id

Ref: AnswerCategory.userId > InternalUser.id

Ref: Answer.quizzId > Quizz.id

Ref: QuizzSet.userId > InternalUser.id

Ref: MultiPlayerGame.quizzSetId > QuizzSet.id

Ref: MultiPlayerGame.userId > InternalUser.id

Ref: SinglePlayerGame.quizzSetId > QuizzSet.id

Ref: SinglePlayerGame.userId > InternalUser.id

Ref: SinglePlayerGame.singlePlayerGameCategoryId > SinglePlayerGameCategory.id

Ref: Room.multiPlayergameId - MultiPlayerGame.id

Ref: History.userId > InternalUser.id

Ref: History.multiPlayergameId - MultiPlayerGame.id

Ref: Rank.historyId > History.id
